--- a/trumhacksex.cfg
+++ b/trumhacksex.cfg
@@ -19,7 +19,8 @@ anti_aim_velocity_spoofer_strafe_distance: number(20)
 rage_misc_movement_no_jump_cooldown: bool(true)
 rage_target_aim_dot_size: number(5.53)
 rage_target_aim_use_air_hit_part: bool(true)
-rage_target_aim_key: bool(false)
+setting_configuration_list: string(./trumhacksex)
+rage_target_aim_key: bool(true)
 visuals_esp_names_color: rgb(0.4937500059604645,0.3130000829696655,0.907012939453125,1)
 anti_aim_c_sync_type: string(Target Random)
 rage_target_aim_aim_part: string(UpperTorso)
@@ -48,7 +49,7 @@ ui_watermark: bool(true)
 anti_aim_starhook_classics_keybind_KEY STATE: string(Toggle)
 anti_aim_velocity_spoofer_enabled: bool(true)
 ui_toggle: Enum.KeyCode.RightControl
-rage_target_aim_auto_shoot: bool(false)
+rage_target_aim_auto_shoot: bool(true)
 settings_configuration_name: string(trumhacksex)
 ui_toggle_KEY STATE: string(Toggle)
 anti_aim_starhook_classics_keybind_KEY: Enum.KeyCode.Y
@@ -83,7 +84,7 @@ legit_assist_resolver_method: string(Recalculate)
 visuals_esp_health_text_color: rgb(0,0,1,1)
 legit_assist_checks: table(Knocked)
 rage_cframe_fly_enabled: bool(false)
-rage_target_aim_look_at: bool(false)
+rage_target_aim_look_at: bool(true)
 legit_assist_settings_field_of_view_radius: number(1)
 anti_aim_c_sync_keybind_KEY: Enum.KeyCode.N
 anti_aim_c_sync_enabled: bool(true)
@@ -95,7 +96,7 @@ visuals_cursor_custom_text_text: string()
 rage_target_aim_air_offset: number(4)
 rage_target_aim_use_air_offset: bool(true)
 rage_target_aim_bullet_tp_enabled: bool(false)
-legit_assist_key: bool(false)
+legit_assist_key: bool(true)
 rage_cframe_fly_keybind_KEY STATE: string(Toggle)
 anti_aim_velocity_spoofer_strafe_speed: number(1)
 visuals_bullet_tracers_fade_duration: number(2)
@@ -205,7 +206,7 @@ rage_target_aim_tracer_thickness: number(1)
 rage_target_aim_field_of_view_radius: number(1)
 rage_target_aim_closest_body_part: bool(false)
 rage_target_aim_notify_duration: number(2)
-rage_target_aim_notify: bool(false)
+rage_target_aim_notify: bool(true)
 legit_silent_resolver: bool(true)
 legit_silent_anti_ground_shots: bool(false)
 visuals_bullet_tracers_color_gradient_1: rgb(0.9158075451850891,0.3803921341896057,1,1)
